# ide-updater

./: LICENSE  PUBLISH.md  README.md  debug_kiro_sources.py  debug_kiro_version.py  debug_versions.py  kiro_page.js  pyproject.toml  test_kiro_fix.py
.github/: FUNDING.yml
tests/: test_version.py
