[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ide-updater"
version = "0.1.0"
description = "A CLI tool to update Linux IDEs (VS Code, Cursor, Kiro)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Cosmah", email = "cosmah@example.com" },
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "packaging>=23.2",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
ide-updater = "ide_updater.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ide_updater"]
